--- a/app/contact.html
+++ b/app/contact.html
@@ -3,5 +3,12 @@
 {% block seccion %}contact{% endblock %}
 
 {% block content %}
-	contact
+	<p class="lead">Yay! I can't wait to hear from you.</p>
+	<p>If you want to get in touch with me, you can drop me a line or two at <span class="email"></span>.</p>
+	<p>Or, you can contact me trough one of these networks.</p>
+	<ul class="social">
+	    <li><a href="https://ar.linkedin.com/in/amireynoso"><i class="fa fa-linkedin"></i></a></li>
+	    <li><a href="https://github.com/amireynoso"><i class="fa fa-github"></i></a></li>
+	    <li><a href="https://twitter.com/bakery"><i class="fa fa-twitter"></i></a></li>
+	</ul>
 {% endblock %}
