--- a/app/works.html
+++ b/app/works.html
@@ -3,5 +3,6 @@
 {% block seccion %}works{% endblock %}
 
 {% block content %}
-	works
+	<p class="lead">Working on this!</p>
+	<p>Ironic, isn't it?</p>
 {% endblock %}
