--- a/app/index.html
+++ b/app/index.html
@@ -9,8 +9,8 @@
 	<p>Clean code and pixel-perfect advocate.</p>
 	<p class="tagline">Looking for new challenges.</p>
 	<ul class="social">
-	    <li><a href="https://ar.linkedin.com/in/amireynoso"><i class="fa fa-linkedin"></i></a></li>
-	    <li><a href="https://github.com/amireynoso"><i class="fa fa-github"></i></a></li>
-	    <li><a href="https://twitter.com/bakery"><i class="fa fa-twitter"></i></a></li>
+	    <li><a href="http://ar.linkedin.com/in/amireynoso"><i class="fa fa-linkedin"></i></a></li>
+	    <li><a href="http://github.com/amireynoso"><i class="fa fa-github"></i></a></li>
+	    <li><a href="http://twitter.com/bakery"><i class="fa fa-twitter"></i></a></li>
 	</ul>
 {% endblock %}
