Updated dependencies and information

--- a/app/about.html
+++ b/app/about.html
@@ -3,9 +3,11 @@
 {% block seccion %}about{% endblock %}
 
 {% block content %}
-	<p>Hi there! My name is María Amantani Reynoso, but as you can probably guess, I go by Ami (you know, for short). I'm 23 years old, and I currently work as a front-end developer in a really cool advertising agency.</p>
-	<p>I recently finished my studies at University of Palermo. I chose Image and Sound Design as my degree because I'm passionate about web design, and I've been since I can remember. I started venturing on the field when I was around 12, by building mini websites called fanlistings as a hobby. That's how I taught myself HTML and CSS, and learned how to use tools such as Photoshop and Illustrator. I also grasped some pretty good notions of PHP and MySQL.</p>
+	<p>Hi there! My name is María Amantani Reynoso, but as you can probably guess, I go by Ami (you know, for short). I'm 25 years old, and I currently work as a Sr Front End Engineer at Mercado Libre, the top e-commerce platform in Latin America.</p>
+	<p>I am currently transitioning into a full stack developer. Also, I am a speaker! On 2016 I spoke at 2 international conferences.</p>
+	<p>I graduated from University of Palermo, with an Image and Sound Design degree. I chose it because I'm passionate about web design, and I've been since I can remember. I started venturing on the field when I was around 12, by building mini websites called fanlistings as a hobby. That's how I taught myself HTML and CSS, and learned how to use tools such as Photoshop and Illustrator. I also grasped some pretty good notions of PHP and MySQL.</p>
 	<p>Well, but that's just how I started. At University I crossed paths with so many different technologies and areas (such as cinematography or photography, among others), that formed me as a whole Image and Sound Designer.</p>
 	<p>What I most enjoy about my work is translating visual experiences into code, always by exploring new horizons and pushing myself to deliver my best.</p>
+	<p><em>My CV was last revamped in 2015 and a lot happened since then!</em></p>
 	<a class="button" href="pdf/CV_MariaAmantaniReynoso.pdf">Download my resumé</a>
 {% endblock %}
