--- a/app/index.html
+++ b/app/index.html
@@ -4,7 +4,7 @@
 
 {% block content %}
 	<h1>Ami Reynoso</h1>
-	<p>23 years-old front-end web developer from Buenos Aires, Argentina.</p>
+	<p>25 years-old frontend engineer from Buenos Aires, Argentina.</p>
 	<p>Image and Sound Design graduate at University of Palermo.</p>
 	<p>Clean code and pixel-perfect advocate.</p>
 	<p class="tagline">Looking for new challenges.</p>
