--- a/src/index.html
+++ b/src/index.html
@@ -4,7 +4,11 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>👩🏽‍💻 ami reynoso</title>
+    <title>Ami Reynoso's resume</title>
+    <link
+      rel="icon"
+      href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 100 100%22><text y=%22.9em%22 font-size=%2290%22>👩🏽‍💻</text></svg>"
+    />
     <link href="./styles.css" rel="stylesheet" />
   </head>
   <body class="bg-slate-50 font-mono">
