--- a/src/index.html
+++ b/src/index.html
@@ -29,8 +29,8 @@
             leadership.
           </p>
           <p>
-            Ready to bring my skills and dedication to an Engineering Manager
-            role and contribute to the success of your organization.
+            I’m ready to bring my skills and dedication as an Engineering
+            Manager to contribute to the growth and success of your team.
           </p>
         </section>
         <section class="md:flex">
