Update Development Manager @ Shopify experience block

--- a/src/index.html
+++ b/src/index.html
@@ -86,42 +86,31 @@
           </p>
           <ul class="text-base">
             <li>
-              Led and mentored a team of 6 developers, gaining experience in
-              effectively managing and scaling teams to up to 10 developers on
-              both backend and frontend projects.
+              Led a team of 6 developers in improving Shopify's Inventory
+              management system.
             </li>
             <li>
-              Conducted interviews and participated in the hiring process that
-              attracted top talent, resulting in the formation of a
-              high-performing team.
+              Collaborated with product owners and cross-functional partners to
+              develop strategic roadmaps, enabling the successful delivery of
+              key projects aligned with business goals.
             </li>
             <li>
-              Developed comprehensive onboarding materials, collaboratively
-              defined team values resulting in a “team blueprint" to facilitate
-              seamless integration for new team members, fostering a strong
-              sense of belonging and alignment with the team's vision.
+              Managed multiple work streams concurrently while upholding high
+              craftsmanship standards.
             </li>
             <li>
-              Created strategic roadmaps and successfully delivered key
-              projects, ensuring their timely completion and alignment with
-              business goals. Projects were executed concurrently, with a focus
-              on maintaining a high level of craftsmanship across multiple work
-              streams.
+              Developed comprehensive onboarding materials and defined team
+              values, fostering seamless integration and a strong sense of
+              belonging.
             </li>
             <li>
-              Championed performance management and career development for team
-              members, providing regular guidance, support, and opportunities
-              for growth. Monitored performance metrics and implemented measures
-              to enhance team members' professional development.
+              Attracted top talent through effective hiring processes, building
+              a high-performing team.
             </li>
             <li>
-              Implemented an efficient bug-addressing process, resulting in
-              improved bug-fixing SLAs and elevated product quality.
-            </li>
-            <li>
-              Built and maintained a customized tool in Rails to reinforce and
-              promote team cultural values, fostering an inclusive and
-              collaborative work environment.
+              Supported team members' career growth through guidance,
+              performance monitoring, and implementation of professional
+              development plans.
             </li>
           </ul>
         </article>
