Update Senior Developer @ Shopify experience block

--- a/src/index.html
+++ b/src/index.html
@@ -130,41 +130,20 @@
           </p>
           <ul class="text-base">
             <li>
-              Acted as a tech lead on multiple projects, including the
-              development of internal productivity tools, Shopify's backoffice,
-              and significant tech stack migrations from Rails to React.
+              Oversaw multiple projects as a tech lead, including the
+              development of internal productivity tools, Shopify's IMS
+              improvements, and codebase migrations from Rails to React.
             </li>
             <li>
-              Led initiatives to enhance platform stability and scalability of
-              Shopify's internal productivity tool, resulting in improved
-              performance and increased productivity for users and developers on
-              the team. E.g.,
-              <ul>
-                <li>
-                  Streamlined the process for managing dependency upgrades,
-                  ensuring efficient project execution and minimizing downtime.
-                </li>
-                <li>
-                  Documented comprehensive testing best practices and
-                  guidelines, leading to improved code quality, faster testing
-                  cycles, and more reliable software releases.
-                </li>
-                <li>
-                  Introduced data instrumentation abstractions, enabling better
-                  insights and analytics for data-driven decision-making,
-                  contributing to improved business outcomes.
-                </li>
-              </ul>
+              Led initiatives to enhance platform stability and scalability,
+              resulting in improved performance and increased productivity for
+              users and developers through streamlined processes, comprehensive
+              testing practices, and data instrumentation.
             </li>
             <li>
-              As a manager trainee, successfully led and managed a team of 2
-              junior developers, providing guidance, support, and fostering
-              their growth as they transitioned into more senior roles.
-            </li>
-            <li>
-              Mentored and formally coached a team of 5 developers, fostering
-              their technical growth and professional development, resulting in
-              increased individual and team performance.
+              Successfully managed a team of 4 developers, and mentored over 5
+              developers, fostering their growth and contributing to increased
+              individual and team performance.
             </li>
           </ul>
         </article>
