Update Frontend Developer @ Shopify experience block

--- a/src/index.html
+++ b/src/index.html
@@ -164,26 +164,18 @@
           <ul class="text-base">
             <li>
               Developed and optimized internal productivity tools, driving
-              significant improvements in Shopify's R&D operations as the
-              company doubled in size, enhancing team efficiency, and increasing
-              employee productivity.
+              significant improvements in Shopify's R&D operations, enhancing
+              team efficiency and increasing employee productivity.
             </li>
             <li>
-              Led successful product development initiatives, overseeing the
-              migration of a legacy Rails codebase to React. Implemented robust
-              team development practices and established a strong foundation for
-              the frontend tech stack.
+              Led the migration of significant parts of a legacy Rails codebase
+              to React, implementing robust team development practices and
+              establishing a strong foundation for the frontend tech stack.
             </li>
             <li>
               Spearheaded the creation of a team-wide engineering ritual focused
               on knowledge sharing, fostering a collaborative environment and
               facilitating continuous learning among team members.
-            </li>
-            <li>
-              Demonstrated expertise in utilizing a range of cutting-edge
-              technologies, including Typescript, React, GraphQL, Ruby
-              (including Rails), and SQL for data reporting, ensuring efficient
-              and effective implementation of frontend solutions.
             </li>
           </ul>
         </article>
