Update Project Lead @ Mercado Libre experience block

--- a/src/index.html
+++ b/src/index.html
@@ -195,18 +195,19 @@
           </p>
           <ul class="text-base">
             <li>
-              Led the early development phase of Andes UI, Mercado Libre's UI
-              library, collaborating closely with UX and merging existing
-              patterns and components into a unified library.
+              Led the development phase of Andes UI, Mercado Libre's UI library,
+              collaborating with UX to merge and unify existing patterns and
+              components.
             </li>
             <li>
-              Implemented internal frameworks and enhancements to improve the
-              developer experience.
+              Played a key role in developing internal tech stack tooling, which
+              improved the overall frontend development experience across the
+              company.
             </li>
             <li>
-              Successfully developed performance improvements through the
-              utilization of cutting-edge technologies and techniques, such as
-              service workers.
+              Implemented performance enhancements utilizing cutting-edge
+              technologies and techniques to optimize page load speed and
+              efficiency.
             </li>
           </ul>
         </article>
