Update Senior Frontend Developer @ Mercado Libre experience block

--- a/src/index.html
+++ b/src/index.html
@@ -227,22 +227,14 @@
           </p>
           <ul class="text-base">
             <li>
-              Led front-end development for the redesign of Mercado Libre's View
+              Led frontend development for the redesign of Mercado Libre's View
               Item Page, utilizing data-driven incremental changes to increase
-              conversion by 2%.
+              conversion.
             </li>
             <li>
-              Developed training materials and mentored junior developers in
-              Javascript, fostering their technical growth and skill
-              development.
-            </li>
-            <li>
-              Organized regular discipline-wide tech talks, promoting knowledge
-              sharing and collaboration.
-            </li>
-            <li>
-              Worked as a full-stack web developer, leveraging Node.js
-              applications with Express, React, Redux, and Webpack.
+              Mentored junior developers in JavaScript, fostering their
+              technical growth and skill development, as well as organized
+              regular tech talks to promote knowledge sharing and collaboration.
             </li>
           </ul>
         </article>
