Update Semi Senior Frontend Developer @ Mercado Libre experience block

--- a/src/index.html
+++ b/src/index.html
@@ -254,17 +254,13 @@
           </p>
           <ul class="text-base">
             <li>
-              Led front-end development for a net new Cart page feature,
-              delivering a seamless and user-friendly shopping experience.
+              Led frontend development efforts to deliver a seamless and
+              user-friendly experience for the net new Cart Page.
             </li>
             <li>
-              Developed interfaces for key components of Mercado Libre's buying
-              flow and post-purchase flows, including Search, View Item Page,
-              and Reviews.
-            </li>
-            <li>
-              Utilized technologies such as vanilla JS, Backbone, and Marionette
-              applications to develop robust and responsive interfaces.
+              Developed robust and responsive interfaces for key components of
+              Mercado Libre's Buying and Post-purchase flows (including Search,
+              View Item Page, and Reviews).
             </li>
           </ul>
         </article>
