Update Semi Senior Frontend Developer @ Latcom experience block

--- a/src/index.html
+++ b/src/index.html
@@ -280,20 +280,11 @@
           </p>
           <ul class="text-base">
             <li>
-              Built and developed interfaces for internal planning tools,
-              crucial for powering the company's planning and logistic tasks.
-              These single-page applications were developed using jQuery and
-              Angular, ensuring seamless and efficient user experiences.
-            </li>
-            <li>
-              Designed and developed websites for both internal and external
-              clients, utilizing HTML, Sass, and JavaScript to deliver visually
-              appealing and functional websites.
-            </li>
-            <li>
-              Created interactive out-of-home (OOH) advertising widgets and
-              mobile applications using Node.js, Express, and WebSockets,
-              enabling engaging and interactive experiences for users.
+              Developed seamless and efficient internal planning tools, critical
+              for powering the company's planning and logistic tasks. Designed
+              visually appealing and functional landing pages for internal and
+              external clients, and created engaging and interactive out-of-home
+              advertising widgets and mobile applications.
             </li>
           </ul>
         </article>
