Update Frontend Developer @ DataFactory experience block

--- a/src/index.html
+++ b/src/index.html
@@ -304,20 +304,11 @@
           </p>
           <ul class="text-base">
             <li>
-              Developed and designed user interfaces for sports stats widgets,
-              landings, and internal tools, ensuring intuitive and visually
-              appealing user experiences.
-            </li>
-            <li>
-              Created custom Wordpress themes both internally and for external
-              clients, meeting their specific design and functionality
-              requirements.
-            </li>
-            <li>
-              Collaborated on the development of a football stats application
-              built with Flash and ActionScript 2, utilized during the
-              broadcasting of the 2014 World Cup Qualifiers in Latin America,
-              providing real-time and engaging information to viewers.
+              Developed intuitive and visually appealing user interfaces for
+              live sports stats widgets, as well as contributed to a football
+              stats application that provided real-time and engaging information
+              to viewers during the broadcasting of the 2014 World Cup
+              Qualifiers.
             </li>
           </ul>
         </article>
