Add decoration image to header

--- a/src/index.html
+++ b/src/index.html
@@ -20,11 +20,33 @@
   <body class="bg-slate-50 font-serif">
     <main class="prose prose-zinc max-w-[100ch] px-10 py-8">
       <header>
-        <section>
-          <h1 class="mb-2 font-display text-6xl font-normal">Ami Reynoso</h1>
-          <h2 class="mt-0 text-3xl italic text-zinc-500">
-            Engineering Manager
-          </h2>
+        <section class="flex items-start justify-between">
+          <div>
+            <h1 class="mb-2 font-display text-6xl font-normal">Ami Reynoso</h1>
+            <h2 class="mt-0 text-3xl italic text-zinc-500">
+              Engineering Manager
+            </h2>
+          </div>
+          <svg
+            class="max-w-[150px]"
+            xmlns="http://www.w3.org/2000/svg"
+            stroke="rgb(148, 55, 102)"
+            fill="none"
+            stroke-width="2"
+            stroke-linecap="round"
+            stroke-linejoin="round"
+            viewBox="41 60 126 78"
+          >
+            <path
+              fill="rgb(208, 162, 218)"
+              stroke="none"
+              transform="translate(9,-2)"
+              d="M53.2 62 42 124.234l59.912-41.14L141.2 137 158 73.968 53.2 62Z"
+            />
+            <path
+              d="M53.2 62 42 124.234l59.912-41.14L141.2 137 158 73.968 53.2 62Z"
+            />
+          </svg>
         </section>
         <section class="text-lg">
           <p>
