Update link styling

--- a/src/index.html
+++ b/src/index.html
@@ -80,20 +80,29 @@
             <ul>
               <li>
                 📧
-                <a href="mailto:amireynoso@gmail.com">amireynoso@gmail.com</a>
+                <a
+                  href="mailto:amireynoso@gmail.com"
+                  class="no-underline underline-offset-4 hover:underline hover:decoration-pink-light"
+                  >amireynoso@gmail.com</a
+                >
               </li>
               <li>
                 💼
                 <a
                   href="https://www.linkedin.com/in/amireynoso"
                   target="_blank"
+                  class="no-underline underline-offset-4 hover:underline hover:decoration-pink-light"
                 >
                   linkedin.com/in/amireynoso
                 </a>
               </li>
               <li>
                 👾
-                <a href="https://github.com/amireynoso" target="_blank">
+                <a
+                  href="https://github.com/amireynoso"
+                  target="_blank"
+                  class="no-underline underline-offset-4 hover:underline hover:decoration-pink-light"
+                >
                   github.com/amireynoso
                 </a>
               </li>
