Add footer with link to LinkedIn

--- a/src/index.html
+++ b/src/index.html
@@ -315,6 +315,38 @@
           </ul>
         </article>
       </section>
+      <footer class="mt-8 flex items-center justify-between text-sm">
+        <svg
+          class="max-w-[100px]"
+          xmlns="http://www.w3.org/2000/svg"
+          stroke="rgb(148, 55, 102)"
+          fill="none"
+          stroke-width="2"
+          stroke-linecap="round"
+          stroke-linejoin="round"
+          viewBox="41 60 126 78"
+        >
+          <path
+            fill="rgb(208, 162, 218)"
+            stroke="none"
+            transform="translate(9,-2)"
+            d="M53.2 62 42 124.234l59.912-41.14L141.2 137 158 73.968 53.2 62Z"
+          />
+          <path
+            d="M53.2 62 42 124.234l59.912-41.14L141.2 137 158 73.968 53.2 62Z"
+          />
+        </svg>
+        <p class="italic text-zinc-500">
+          Find earlier work experience, speaking experience, publications and
+          all references in
+          <a
+            href="https://www.linkedin.com/in/amireynoso"
+            target="_blank"
+            class="text-pink-dark no-underline underline-offset-4 hover:underline hover:decoration-pink-light"
+            >my LinkedIn profile</a
+          >.
+        </p>
+      </footer>
     </main>
   </body>
 </html>
