Update header contact and what I'm looking for sections

--- a/src/index.html
+++ b/src/index.html
@@ -68,40 +68,37 @@
         </section>
         <section class="md:flex">
           <article class="flex-1">
-            <h4 class="uppercase">What I’m looking for</h4>
-            <ul>
-              <li>💖 Engineering Manager role</li>
-              <li>🔍 Remote (AMER) or hybrid roles</li>
-              <li>🗺️ Located in Vancouver, Canada 🇨🇦</li>
+            <h4 class="uppercase">🔍 What I’m looking for</h4>
+            <ul class="text-base">
+              <li>Engineering Manager role</li>
+              <li>Remote (AMER) or hybrid roles</li>
+              <li>Located in Vancouver, Canada 🇨🇦</li>
             </ul>
           </article>
           <article class="flex-1">
-            <h4 class="uppercase">Contact</h4>
-            <ul>
+            <h4 class="uppercase">📧 Contact</h4>
+            <ul class="text-base">
               <li>
-                📧
                 <a
                   href="mailto:amireynoso@gmail.com"
-                  class="no-underline underline-offset-4 hover:underline hover:decoration-pink-light"
+                  class="text-pink-dark no-underline underline-offset-4 hover:underline hover:decoration-pink-light"
                   >amireynoso@gmail.com</a
                 >
               </li>
               <li>
-                💼
                 <a
                   href="https://www.linkedin.com/in/amireynoso"
                   target="_blank"
-                  class="no-underline underline-offset-4 hover:underline hover:decoration-pink-light"
+                  class="text-pink-dark no-underline underline-offset-4 hover:underline hover:decoration-pink-light"
                 >
                   linkedin.com/in/amireynoso
                 </a>
               </li>
               <li>
-                👾
                 <a
                   href="https://github.com/amireynoso"
                   target="_blank"
-                  class="no-underline underline-offset-4 hover:underline hover:decoration-pink-light"
+                  class="text-pink-dark no-underline underline-offset-4 hover:underline hover:decoration-pink-light"
                 >
                   github.com/amireynoso
                 </a>
