Add references section

--- a/src/index.html
+++ b/src/index.html
@@ -312,6 +312,141 @@
           </ul>
         </article>
       </section>
+      <section>
+        <h2>References</h2>
+        <figure>
+          <blockquote
+            cite="https://www.linkedin.com/in/amireynoso/details/recommendations"
+            class="prose-sm"
+          >
+            <p>
+              Ami is an incredibly talented Engineer and Manager. I've had the
+              pleasure of working with her for over a year. As a leader she
+              leads through kindness, empathy and example. Many in her team have
+              called her "the best manager they've ever had". Her PR reviews are
+              legendary, and she uses them as a teaching moment to level up
+              other developers. She works well cross functionally and has the
+              drive to work through ambiguity and uncertainty. I would recommend
+              Ami 1000x over. She was an unbelievable asset to my team.
+            </p>
+          </blockquote>
+          <figcaption>
+            —Genevieve Bulger, <cite>Director of Engineering at Shopify</cite>
+          </figcaption>
+        </figure>
+        <figure>
+          <blockquote
+            cite="https://www.linkedin.com/in/amireynoso/details/recommendations"
+            class="prose-sm"
+          >
+            <p>
+              Ami was my manager at Shopify for over a year, and has made a
+              significant impact on my life and career. I would strongly
+              recommend her to any organization looking for a skilled and
+              compassionate manager with technical expertise. Ami's ability to
+              empathize with and advocate for her reports is second to none. Her
+              technical competence and leadership skills make her an excellent
+              lead.
+            </p>
+            <p>
+              As someone who has worked closely with Ami, I can attest to her
+              ability to bring out the best in her team. She was not just a
+              manager, but a mentor who helped me grow and develop my technical
+              skills. She was always approachable and available to help, and I
+              always felt comfortable asking her for guidance and advice.
+            </p>
+            <p>
+              Overall, I know Ami would be valuable to any organization lucky
+              enough to have her. She has the skills, experience, and character
+              to lead teams to success and help them thrive. I am confident that
+              she will continue to make a positive impact wherever she goes, and
+              I would work with her again in a heartbeat.
+            </p>
+          </blockquote>
+          <figcaption>
+            —Sarah Reive, <cite>Frontend Developer at Shopify</cite>
+          </figcaption>
+        </figure>
+        <figure>
+          <blockquote
+            cite="https://www.linkedin.com/in/amireynoso/details/recommendations"
+            class="prose-sm"
+          >
+            <p>
+              I worked with Ami as a teammate for more than 3 years, and I'd
+              count her among the best full-stack developers and leaders I've
+              worked with. She never shied from any problem, took full ownership
+              and responsibility for every project she led, and ensured we
+              shipped the right thing on time. And somehow, she always made it a
+              lot of fun.
+            </p>
+            <p>
+              After we both changed teams at Shopify, I was able to watch as she
+              transitioned into engineering management, and saw the deep level
+              of care she had for each of her reports and how thoughtful she was
+              supporting their growth, but also the attention to detail in
+              ensuring the team was organized and effective. She's someone who's
+              able to elevate those around her to achieve excellent results.
+            </p>
+            <p>
+              I've worked with few people who have demonstrated such strong
+              leadership in both technical and people management domains. It'd
+              be a privilege for me to work alongside her again. And I
+              absolutely recommend her for any staff developer or engineering
+              manager role.
+            </p>
+          </blockquote>
+          <figcaption>
+            —Cameron Woloshyn, <cite>Engineering Manager at Shopify</cite>
+          </figcaption>
+        </figure>
+        <figure>
+          <blockquote
+            cite="https://www.linkedin.com/in/amireynoso/details/recommendations"
+            class="prose-sm"
+          >
+            <p>
+              Ami was my manager and mentor at Shopify. She was more than I
+              could have ever hoped for:
+            </p>
+            <ul>
+              <li>
+                a natural leader able to see the good in all of us and bring out
+                our best selves
+              </li>
+              <li>
+                organized and willing to share in a way that enabled all of us
+                to do our best work
+              </li>
+              <li>
+                detail-oriented while still being able to think critically about
+                the big picture
+              </li>
+              <li>
+                focused on doing the right thing and delivering a quality
+                product
+              </li>
+            </ul>
+            <p>
+              She was also an incredible developer, able to analyze code changes
+              from a single line of code all the way to broad multi-feature
+              architectural-level changes. I could literally come to her with
+              any question or problem, and she was there to help and pave the
+              way for success.
+            </p>
+            <p>
+              I would highly recommend Ami's work, both as a manager and a
+              software developer. Not only is she excellent at delivering a
+              quality product that any company would be proud to offer their
+              clients, she's an amazing human being who approaches everything
+              with care and kindness.
+            </p>
+          </blockquote>
+          <figcaption>
+            —Dori Maloney, <cite>Senior Developer at Shopify</cite>
+          </figcaption>
+        </figure>
+      </section>
       <footer class="mt-8 flex items-center justify-between text-sm">
         <svg
           class="max-w-[100px]"
